--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Top secret project...",
   "main": "not-yet.js",
   "scripts": {
-    "dev": "kotatsu serve app/main.tsx --open"
+    "dev": "kotatsu serve app/main.tsx --open",
+    "prettier": "prettier --write './app/**/*.ts' './app/**/*.tsx' && prettier --parser scss --write '**/*.scss'"
   },
   "kotatsu": {
     "typescript": true,
     "sass": true
   },
+  "prettier": "@yomguithereal/prettier-config",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/medialab/nansi.git"
@@ -35,13 +37,19 @@
   "devDependencies": {
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@yomguithereal/prettier-config": "^1.1.0",
+    "graphology-types": "^0.19.0",
     "kotatsu": "^0.22.0",
+    "prettier": "^2.1.2",
     "sass": "^1.29.0",
     "typescript": "^4.0.5"
   },
   "dependencies": {
     "bulma": "^0.9.1",
+    "graphology": "^0.19.2",
+    "graphology-gexf": "^0.7.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "recoil": "^0.1.2"
   }
 }
