--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prettier": "prettier --write './app/**/*.ts' './app/**/*.tsx' && prettier --parser scss --write '**/*.scss'"
   },
   "kotatsu": {
+    "index": "./app/index.html",
     "typescript": true,
     "sass": true
   },
@@ -48,6 +49,7 @@
     "bulma": "^0.9.1",
     "graphology": "^0.19.2",
     "graphology-gexf": "^0.7.1",
+    "material-icons-svg": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "recoil": "^0.1.2"
