--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "homepage": "https://github.com/medialab/nansi#readme",
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/webpack-env": "^1.15.3",
@@ -52,6 +53,7 @@
   },
   "dependencies": {
     "bulma": "^0.9.1",
+    "classnames": "^2.2.6",
     "comma-number": "^2.0.1",
     "graphology": "^0.19.2",
     "graphology-gexf": "^0.7.1",
