--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Top secret project...",
   "main": "not-yet.js",
   "scripts": {
+    "clean": "rm -rf build",
+    "build": "kotatsu build client app/main.tsx --output build --progress --production",
+    "deploy": "./scripts/deploy.sh",
     "dev": "kotatsu serve app/main.tsx --open --progress",
     "prettier": "prettier --write './app/**/*.ts' './app/**/*.tsx' && prettier --parser scss --write '**/*.scss'"
   },
@@ -45,6 +48,7 @@
     "@types/react-dom": "^16.9.9",
     "@types/webpack-env": "^1.15.3",
     "@yomguithereal/prettier-config": "^1.1.0",
+    "gh-pages": "^3.1.0",
     "graphology-types": "^0.19.0",
     "kotatsu": "^0.22.0",
     "prettier": "^2.1.2",
