--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "material-icons-svg": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.2.4",
     "recoil": "^0.1.2",
     "sigma": "^2.0.0-alpha40"
   }
