--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "graphology-gexf": "^0.7.1",
     "graphology-metrics": "^1.14.1",
     "hint.css": "^2.6.0",
+    "lodash": "^4.17.20",
     "material-icons-svg": "^1.0.0",
     "pandemonium": "^2.0.0",
     "react": "^17.0.1",
