--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
+    "react-select": "^3.1.1",
     "recoil": "^0.1.2",
     "seedrandom": "^3.0.5",
     "sigma": "^2.0.0-alpha40"
