--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "kotatsu build client app/main.tsx --output build --progress --production",
     "deploy": "./scripts/deploy.sh",
     "dev": "kotatsu serve app/main.tsx --open --progress",
-    "prettier": "prettier --write '**/*.ts' '**/*.tsx' && prettier --parser scss --write '**/*.scss'"
+    "prettier": "prettier --write '**/*.ts' '**/*.tsx' && prettier --parser scss --write '**/*.scss'",
+    "test": "ts-mocha 'test/**/*.ts' -p tsconfig.lib.json"
   },
   "kotatsu": {
     "config": "./webpack.config.js",
@@ -45,6 +46,7 @@
   "homepage": "https://github.com/medialab/nansi#readme",
   "devDependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/mocha": "^8.0.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/seedrandom": "^2.4.28",
@@ -53,8 +55,10 @@
     "gh-pages": "^3.1.0",
     "graphology-types": "^0.19.0",
     "kotatsu": "^0.22.0",
+    "mocha": "^8.2.1",
     "prettier": "^2.2.1",
     "sass": "^1.29.0",
+    "ts-mocha": "^8.0.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
@@ -67,8 +71,10 @@
     "graphology-gexf": "^0.7.1",
     "graphology-metrics": "^1.14.1",
     "hint.css": "^2.6.0",
+    "iwanthue": "^1.4.0",
     "lodash": "^4.17.20",
     "material-icons-svg": "^1.0.0",
+    "mnemonist": "^0.38.0",
     "pandemonium": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
