--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "sass": "^1.29.0",
     "ts-mocha": "^8.0.0",
     "ts-node": "^9.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "worker-loader": "^3.0.5"
   },
   "dependencies": {
     "bulma": "^0.9.1",
