--- a/package.json
+++ b/package.json
@@ -69,8 +69,10 @@
     "comma-number": "^2.0.1",
     "file-saver": "^2.0.5",
     "graphology": "^0.19.2",
+    "graphology-communities-louvain": "^1.3.2",
     "graphology-gexf": "^0.7.1",
     "graphology-metrics": "^1.14.1",
+    "graphology-operators": "^1.3.0",
     "hint.css": "^2.6.0",
     "iwanthue": "^1.4.0",
     "lodash": "^4.17.20",
