--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "graphology-gexf": "^0.7.1",
     "graphology-metrics": "^1.14.1",
     "graphology-operators": "^1.3.0",
+    "graphology-utils": "^1.8.0",
     "hint.css": "^2.6.0",
     "iwanthue": "^1.4.0",
     "lodash": "^4.17.20",
