--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "kotatsu build client app/main.tsx --output build --progress --production",
     "deploy": "./scripts/deploy.sh",
     "dev": "kotatsu serve app/main.tsx --open --progress",
+    "prepublish": "npm test",
     "prettier": "prettier --write '**/*.ts' '**/*.tsx' && prettier --parser scss --write '**/*.scss'",
     "test": "ts-mocha 'test/**/*.ts' -p tsconfig.lib.json"
   },
@@ -50,7 +51,7 @@
     "@types/mocha": "^8.0.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-select": "^3.0.26",
+    "@types/react-select": "^3.0.27",
     "@types/seedrandom": "^2.4.28",
     "@types/webpack-env": "^1.16.0",
     "@yomguithereal/prettier-config": "^1.1.0",
@@ -73,11 +74,10 @@
     "graphology": "^0.19.2",
     "graphology-communities-louvain": "^1.3.2",
     "graphology-gexf": "^0.7.1",
-    "graphology-metrics": "^1.14.1",
+    "graphology-metrics": "^1.14.2",
     "graphology-operators": "^1.3.0",
     "graphology-utils": "^1.8.0",
     "hint.css": "^2.6.0",
-    "iwanthue": "^1.4.0",
     "lodash": "^4.17.20",
     "material-icons-svg": "^1.0.0",
     "mnemonist": "^0.38.0",
