--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "graphology-operators": "^1.3.0",
     "graphology-utils": "^1.8.0",
     "hint.css": "^2.6.0",
+    "iwanthue": "^1.4.1",
     "lodash": "^4.17.20",
     "material-icons-svg": "^1.0.0",
     "mnemonist": "^0.38.0",
