--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "homepage": "https://github.com/medialab/nansi#readme",
   "devDependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/d3-scale": "^3.2.1",
     "@types/lodash": "^4.14.165",
     "@types/mocha": "^8.0.4",
     "@types/react": "^17.0.0",
@@ -70,6 +71,7 @@
     "bulma": "^0.9.1",
     "classnames": "^2.2.6",
     "comma-number": "^2.0.1",
+    "d3-scale": "^3.2.3",
     "file-saver": "^2.0.5",
     "graphology": "^0.19.2",
     "graphology-communities-louvain": "^1.3.2",
