--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "material-icons-svg": "^1.0.0",
     "mnemonist": "^0.38.0",
     "pandemonium": "^2.0.0",
+    "rc-slider": "^9.6.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
