--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "worker-loader": "^3.0.5"
   },
   "dependencies": {
+    "bloomer": "^0.6.5",
     "bulma": "^0.9.1",
     "classnames": "^2.2.6",
     "comma-number": "^2.0.1",
@@ -76,6 +77,7 @@
     "graphology": "^0.19.2",
     "graphology-communities-louvain": "^1.3.2",
     "graphology-gexf": "^0.7.1",
+    "graphology-layout-forceatlas2": "^0.6.0",
     "graphology-metrics": "^1.14.2",
     "graphology-operators": "^1.3.0",
     "graphology-utils": "^1.8.0",
