--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "graphology-communities-louvain": "^1.3.2",
     "graphology-gexf": "^0.7.1",
     "graphology-layout-forceatlas2": "^0.6.0",
+    "graphology-layout-noverlap": "^0.3.0",
     "graphology-metrics": "^1.14.2",
     "graphology-operators": "^1.3.0",
     "graphology-utils": "^1.8.0",
