--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "graphology": "^0.19.2",
     "graphology-communities-louvain": "^1.3.2",
     "graphology-gexf": "^0.7.1",
+    "graphology-graphml": "^0.2.0",
     "graphology-layout-forceatlas2": "^0.6.0",
     "graphology-layout-noverlap": "^0.3.0",
     "graphology-metrics": "^1.14.2",
