--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "graphology-layout-forceatlas2": "^0.6.0",
     "graphology-layout-noverlap": "^0.3.0",
     "graphology-metrics": "^1.14.2",
+    "graphology-minivan": "^1.4.0",
     "graphology-operators": "^1.4.0",
     "graphology-svg": "^0.1.2",
     "graphology-utils": "^2.0.0",
