--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
     "@types/seedrandom": "^2.4.28",
     "@types/webpack-env": "^1.16.0",
     "@yomguithereal/prettier-config": "^1.1.0",
+    "file-loader": "^6.2.0",
     "gh-pages": "^3.1.0",
     "graphology-types": "^0.19.2",
     "kotatsu": "^0.22.0",
     "mocha": "^8.2.1",
     "prettier": "^2.2.1",
     "sass": "^1.32.4",
+    "svg-url-loader": "^7.1.1",
     "ts-mocha": "^8.0.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
@@ -98,6 +100,7 @@
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
     "react-select": "^3.2.0",
+    "react-twitter-widgets": "^1.9.5",
     "recoil": "^0.1.2",
     "seedrandom": "^3.0.5",
     "sigma": "^2.0.0-alpha40"
