--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "kotatsu build client app/main.tsx --output build --progress --production",
     "deploy": "./scripts/deploy.sh",
     "dev": "kotatsu serve app/main.tsx --open --progress",
-    "prepublish": "npm test",
+    "prepublishOnly": "npm test",
     "prettier": "prettier --write '**/*.ts' '**/*.tsx' && prettier --parser scss --write '**/*.scss'",
     "test": "ts-mocha 'test/**/*.ts' -p tsconfig.lib.json"
   },
@@ -46,49 +46,48 @@
   },
   "homepage": "https://github.com/medialab/nansi#readme",
   "devDependencies": {
-    "@types/classnames": "^2.2.11",
-    "@types/d3-scale": "^3.2.2",
-    "@types/lodash": "^4.14.168",
+    "@types/classnames": "^2.3.1",
+    "@types/d3-scale": "^3.3.1",
+    "@types/lodash": "^4.14.170",
     "@types/mocha": "^8.2.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-select": "^3.1.2",
-    "@types/seedrandom": "^2.4.28",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "@types/react-select": "^4.0.16",
+    "@types/seedrandom": "^3.0.0",
     "@types/webpack-env": "^1.16.0",
     "@yomguithereal/prettier-config": "^1.1.0",
     "file-loader": "^6.2.0",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^3.2.3",
     "graphology-types": "^0.19.2",
-    "kotatsu": "^0.22.0",
-    "mocha": "^8.2.1",
-    "prettier": "^2.2.1",
-    "sass": "^1.32.4",
+    "kotatsu": "^0.22.1",
+    "mocha": "^8.4.0",
+    "prettier": "^2.3.1",
+    "sass": "^1.35.1",
     "svg-url-loader": "^7.1.1",
     "ts-mocha": "^8.0.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4",
     "worker-loader": "^3.0.7"
   },
   "dependencies": {
-    "bloomer": "^0.6.5",
-    "bulma": "^0.9.1",
+    "bulma": "^0.9.3",
     "bulmaswatch": "^0.8.1",
     "classnames": "^2.2.6",
-    "comma-number": "^2.0.1",
+    "comma-number": "^2.1.0",
     "d3-scale": "^3.2.3",
     "file-saver": "^2.0.5",
-    "graphology": "^0.19.3",
-    "graphology-canvas": "^0.3.1",
+    "graphology": "^0.20.0",
+    "graphology-canvas": "^0.3.2",
     "graphology-communities-louvain": "^1.4.1",
     "graphology-gexf": "^0.7.3",
-    "graphology-graphml": "^0.3.0",
-    "graphology-layout-forceatlas2": "^0.6.0",
+    "graphology-graphml": "^0.3.1",
+    "graphology-layout-forceatlas2": "^0.6.1",
     "graphology-layout-noverlap": "^0.3.0",
     "graphology-metrics": "^1.14.2",
     "graphology-minivan": "^1.4.0",
     "graphology-operators": "^1.4.0",
     "graphology-svg": "^0.1.2",
-    "graphology-utils": "^2.0.0",
+    "graphology-utils": "^2.1.0",
     "hint.css": "^2.6.0",
     "iwanthue": "^1.5.0",
     "lodash": "^4.17.20",
@@ -98,11 +97,11 @@
     "rc-slider": "^9.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-dropzone": "^11.2.4",
-    "react-select": "^3.2.0",
+    "react-dropzone": "^11.3.4",
+    "react-select": "^4.3.1",
     "react-twitter-widgets": "^1.9.5",
     "recoil": "^0.1.2",
     "seedrandom": "^3.0.5",
-    "sigma": "^2.0.0-alpha40"
+    "sigma": "2.0.0-alpha40"
   }
 }
