--- a/package.json
+++ b/package.json
@@ -47,26 +47,26 @@
   "homepage": "https://github.com/medialab/nansi#readme",
   "devDependencies": {
     "@types/classnames": "^2.3.1",
-    "@types/d3-scale": "^3.3.1",
-    "@types/lodash": "^4.14.170",
-    "@types/mocha": "^8.2.0",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
-    "@types/react-select": "^4.0.16",
-    "@types/seedrandom": "^3.0.0",
-    "@types/webpack-env": "^1.16.0",
-    "@yomguithereal/prettier-config": "^1.1.0",
+    "@types/d3-scale": "^4.0.2",
+    "@types/lodash": "^4.14.177",
+    "@types/mocha": "^9.0.0",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-select": "^5.0.1",
+    "@types/seedrandom": "^3.0.1",
+    "@types/webpack-env": "^1.16.3",
+    "@yomguithereal/prettier-config": "^1.2.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.2.3",
-    "graphology-types": "^0.19.2",
-    "kotatsu": "^0.22.1",
+    "graphology-types": "^0.23.0",
+    "kotatsu": "^0.22.3",
     "mocha": "^8.4.0",
-    "prettier": "^2.3.1",
-    "sass": "^1.35.1",
+    "prettier": "^2.5.0",
+    "sass": "^1.43.5",
     "svg-url-loader": "^7.1.1",
     "ts-mocha": "^8.0.0",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.4",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2",
     "worker-loader": "^3.0.7"
   },
   "dependencies": {
@@ -74,34 +74,34 @@
     "bulmaswatch": "^0.8.1",
     "classnames": "^2.2.6",
     "comma-number": "^2.1.0",
-    "d3-scale": "^4.0.0",
+    "d3-scale": "^4.0.2",
     "file-saver": "^2.0.5",
-    "graphology": "^0.20.0",
-    "graphology-canvas": "^0.3.2",
-    "graphology-communities-louvain": "^1.4.1",
-    "graphology-gexf": "^0.8.0",
-    "graphology-graphml": "^0.3.1",
-    "graphology-layout-forceatlas2": "^0.6.1",
-    "graphology-layout-noverlap": "^0.3.0",
-    "graphology-metrics": "^1.14.2",
+    "graphology": "^0.23.1",
+    "graphology-canvas": "^0.4.0",
+    "graphology-communities-louvain": "^1.5.3",
+    "graphology-gexf": "^0.10.1",
+    "graphology-graphml": "^0.5.0",
+    "graphology-layout-forceatlas2": "^0.8.1",
+    "graphology-layout-noverlap": "^0.4.1",
+    "graphology-metrics": "^1.18.2",
     "graphology-minivan": "^1.4.0",
-    "graphology-operators": "^1.4.0",
-    "graphology-svg": "^0.1.2",
-    "graphology-utils": "^2.1.0",
-    "hint.css": "^2.6.0",
-    "iwanthue": "^1.5.0",
+    "graphology-operators": "^1.5.0",
+    "graphology-svg": "^0.1.3",
+    "graphology-utils": "^2.4.2",
+    "hint.css": "^2.7.0",
+    "iwanthue": "^1.5.1",
     "lodash": "^4.17.20",
     "material-icons-svg": "^1.0.0",
-    "mnemonist": "^0.38.1",
-    "pandemonium": "^2.0.0",
-    "rc-slider": "^9.7.1",
+    "mnemonist": "^0.39.0",
+    "pandemonium": "^2.1.0",
+    "rc-slider": "^9.7.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-dropzone": "^11.3.4",
-    "react-select": "^4.3.1",
+    "react-dropzone": "^11.4.2",
+    "react-select": "^5.2.1",
     "react-twitter-widgets": "^1.9.5",
-    "recoil": "^0.1.2",
+    "recoil": "^0.5.2",
     "seedrandom": "^3.0.5",
-    "sigma": "2.0.0-beta7"
+    "sigma": "^2.1.2"
   }
 }
